# zed-sdk

./: pyproject.toml
camera streaming/multi_sender/cpp/src/: main.cpp
camera streaming/multi_sender/python/: streaming_senders.py
camera streaming/receiver/python/: streaming_receiver.py
object detection/image viewer/python/: monocular_object_detection_image_viewer.py  object_detection_image_viewer.py  zed_camera.py
zed one/python/: streaming_receiver.py
